2011-11-02  Anders Carlsson  <andersca@apple.com>

        Fix build.

        Add new functions to the page loader client.

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController awakeFromNib]):
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::initialize):

2011-11-02  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/10336700> Add API to get rendered text image without having to select it
        https://bugs.webkit.org/show_bug.cgi?id=71407

        Reviewed by Simon Fraser.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/mac/RenderedImageFromDOMRange.mm: Added.
        (-[RenderedImageFromDOMRangeFrameLoadDelegate webView:didFinishLoadForFrame:]):
        (TestWebKitAPI::TEST):

2011-11-02  Benjamin Poulain  <benjamin@webkit.org>

        Make the main frame's base path more explicit in _drt_descriptionSuitableForTestResult
        https://bugs.webkit.org/show_bug.cgi?id=71351

        Reviewed by Darin Adler.

        Add the delimiter "/" at the end of the path instead of adding +1 when using
        the path.

        * DumpRenderTree/mac/ResourceLoadDelegate.mm:
        (-[NSURL _drt_descriptionSuitableForTestResult]):

2011-11-02  Tom Sepez  <tsepez@chromium.org>

        XSSAuditor is silent
        https://bugs.webkit.org/show_bug.cgi?id=70973

        Reviewed by Adam Barth.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::didDetectXSS):
        * DumpRenderTree/chromium/WebViewHost.h:
        * DumpRenderTree/mac/FrameLoadDelegate.mm:
        (-[FrameLoadDelegate webView:didDetectXSS:]):
        * MiniBrowser/mac/BrowserWindowController.m:
        (didDetectXSSForFrame):
        (-[BrowserWindowController awakeFromNib]):
        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::InjectedBundlePage):
        (WTR::InjectedBundlePage::didDetectXSSForFrame):